# soo_functions

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/: __init__.py  soo_functions.py  soo_statistic.py  statistic.py
test/: test_notebook.ipynb  test_statistic.py
