[tool.poetry]
name = "soo-functions"
version = "0.1.0"
description = ""
authors = ["sooyoung-wind <sooyoung.wind@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
torch = "^2.4.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
